# fugee

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  mockup.html  packages.txt  pyproject.toml  requirements.txt
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
agent/: drafting.py  events.py  loop.py  ollama_auth.py
agent/tools/: asylum_stats.py  base.py  country_lookup.py  doc_generator.py  guideline_search.py  web_search.py
app/: app.py  assessment_parse.py  config.py  countries.py  design_tokens.py  interview_script.py  mdlite.py  prompt_loader.py  responder.py
app/phases/: assessment.py  documents.py  intake.py  interview.py  recommendations.py
app/prompts/: assessment.md  interview.md  system.md
app/state/: session.py
data/: README.md
data/scripts/: build_guidelines_index.py  enrich_downloader.py  query_data.py  refresh_data.py  unhcr_downloader.py
deploy/: DEPLOY.md  modal_app.py
scripts/: validate_design_tokens.py
specs/: ARCHITECTURE.md  CHANGELOG.md  ISSUES.md  PLAN.md
specs/data/: README.md  countries.json  countries_enriched.json
tests/: conftest.py
tests/e2e/: test_full_flow.py
tests/integration/: test_assessment.py  test_asylum_stats.py  test_documents.py  test_interview_flow.py  test_interview_handler.py  test_recommendations.py
tests/unit/: test_assessment_logic.py  test_assessment_parse.py  test_country_lookup.py  test_doc_fields.py  test_event_parser.py  test_intake_state.py  test_loop_errors.py  test_loop_isolation.py  test_loop_ping.py  test_responder.py  test_session.py
(+6 files in other folders)
